--- a/experiment-04/pom.xml
+++ b/experiment-04/pom.xml
@@ -6,12 +6,12 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.5.RELEASE</version>
-        <relativePath/> <!-- lookup parent from com.hsfy.experiments.experiments.repository -->
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.hsfy.experiment02</groupId>
-    <artifactId>experiment</artifactId>
+    <groupId>com.hsfy.experiments</groupId>
+    <artifactId>experiments</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>experiment</name>
+    <name>experiments</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -27,10 +27,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
